--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -10,7 +10,13 @@
         <h1>Liu Wei</h1>
     </header>
 
+    <main>
 
-    
+    </main>
+
+    <footer>
+        
+    </footer>
+
 </body>
 </html>
