--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -8,14 +8,26 @@
 <body>
     <header>
         <h1>Liu Wei</h1>
+        <h2>About me</h2>
     </header>
 
     <main>
-<p>hi!!!123!</p>
+    <p>My name is Liu Wei. I’m from China, and I’m very interested in video games, history, and wildlife. Although it’s not the main reason,
+    learning the <abbr title="a ton of heartbreaking things">TRUTHS</abbr> of history has become a motivation for me to go to other countries to change my life,
+    allowing me to have more choices.</p>
+
+<p>I have been interested in programming for a long time. I previously learned PLC programming and then learned C# to create video games, 
+    successfully completing some small projects, which gave me a great sense of achievement.
+     However, I have no knowledge of Java or HTML programming, and I hope to learn new skills in this course.
+     Additionally, <em>I’m a big fan of owls.</em> I love various species of owls because of their appearance and personality, 
+     and I usually set different types of owls as my profile pictures on various social media accounts. Unfortunately,
+      keeping owls as pets is not allowed in Canada, unlike in Japan. I can only hope to photograph wild owls here. <sup>hi!</sup></p>
+
+      <p>Treat others the way you want to be treated; this can make the world a better place.-LIU WEI <sup>is me!</sup></p>
     </main>
 
     <footer>
-        
+      <p> &copy;</p> 
     </footer>
 
 </body>
