--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -12,6 +12,7 @@
     </header>
 
     <main>
+        <img src="images/photo.jpg" alt="picture of me" width="200">
     <p>My name is Liu Wei. I’m from China, and I’m very interested in video games, history, and wildlife. Although it’s not the main reason,
     learning the <abbr title="a ton of heartbreaking things">TRUTHS</abbr> of history has become a motivation for me to go to other countries to change my life,
     allowing me to have more choices.</p>
@@ -24,6 +25,18 @@
       keeping owls as pets is not allowed in Canada, unlike in Japan. I can only hope to photograph wild owls here. <sup>hi!</sup></p>
 
       <p>Treat others the way you want to be treated; this can make the world a better place.-LIU WEI <sup>is me!</sup></p>
+
+      <h2>My Hobby</h2>
+      <ol>
+        <li>Swimming</li>
+        <li>play video games</li>
+        <li>cooking and making dessert</li>
+        <li>writing stories</li>
+        <li>making video games by myself!</li>
+      </ol>
+
+
+      <a href="/notes.html">Click here to go to "notes"</a>
     </main>
 
     <footer>
