--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -36,7 +36,7 @@
       </ol>
 
 
-      <a href="/notes.html">Click here to go to "notes"</a>
+      <a href="https://liu00706.github.io/html-assignment/notes.html">Click here to go to "notes"</a>
     </main>
 
     <footer>
