--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -17,6 +17,6 @@
     </dl>
 
 
-    <a href="/index.html">Click here to go to "index"</a>
+    <a href="https://liu00706.github.io/html-assignment/index.html">Click here to go to "index"</a>
 </body>
 </html>
