--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>notes</title>
-    <h1>Notes</h1>
+    <link rel="stylesheet" href="main.css">
+    
 </head>
 <body>
 
+    <header>
+        <h1>Notes</h1>
+    </header>
     <dl>
         <li><em> a string of emphasized, slightly more important text. Screen readers will change their voice for this text.</em></li>
         <li><strong> a string of highly emphasized, much more important text. Screen readers will change their voice for this text.</strong></li>
