--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>notes</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="CSS/main.css">
     
 </head>
 <body>
@@ -20,7 +20,9 @@
         <li><del> content that was deleted after the document was published. datetime defines when it was removed. No pun intended</del></li>
     </dl>
 
-
+<nav>
     <a href="https://liu00706.github.io/html-assignment/index.html">Click here to go to "index"</a>
+</nav>
+    
 </body>
 </html>
